# traveller-commander

./: .pylintrc  LICENSE  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pylint.yml  tests.yml
src/traveller_commander/controllers/: __init__.py
src/traveller_commander/data/: hulls.json
src/traveller_commander/entities/: __init__.py  character.py  items.py  ship.py
src/traveller_commander/factories/: __init__.py  hull_factory.py
src/traveller_commander/save_parser/: __init__.py  save_parser.py
src/traveller_commander/tui/: __init__.py
